--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,600;0,700;1,400&display=swap');
+/*@import "tailwindcss/base";*/
+/*@import "tailwindcss/components";*/
+/*@import "../node_modules/rsuite/dist/rsuite.css";*/
+/*@import "tailwindcss/utilities";*/
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+/*@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,600;0,700;1,400&display=swap');*/
+
+/*@tailwind base;*/
+
+/*@tailwind components;*/
+/*@tailwind utilities;*/
