--- a/src/styles.css
+++ b/src/styles.css
@@ -6,8 +6,8 @@
 @import "tailwindcss/utilities";
 
 .leaflet-container {
-    width: 1080px;
-    height: 300px;
+    width: 90vw;
+    height: 20vw;
 }
 
 /*#root {*/
