--- a/src/styles.css
+++ b/src/styles.css
@@ -6,8 +6,14 @@
 @import "tailwindcss/utilities";
 
 .leaflet-container {
-    width: 90vw;
-    height: 20vw;
+    width: 100%;
+    height: 100%;
+}
+
+@layer components {
+    .airport-table {
+        @apply border-2 text-xl
+    }
 }
 
 /*#root {*/
