--- a/src/styles.css
+++ b/src/styles.css
@@ -6,8 +6,12 @@
 @import "tailwindcss/utilities";
 
 .leaflet-container {
-    width: 100%;
+    /*height: 200px;*/
+    /*max-width: 100%;*/
+    /*width: 200px;*/
     height: 100%;
+    width: 100%;
+    /*min-height: 100%;*/
 }
 
 /*html {*/
