--- a/src/styles.css
+++ b/src/styles.css
@@ -19,6 +19,42 @@
 }
 
 
+@keyframes fadein {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+.mapboxgl-popup {
+    animation: fadein 0.2s;
+}
+
+.mapboxgl-popup-content {
+    max-width: 300px;
+    min-width: 50px;
+    border-radius: 12px;
+    padding: 13px 19px;
+    box-shadow: 0 3px 14px rgba(0, 0, 0, 0.4);
+    min-width: 300px;
+}
+
+.mapboxgl-popup-close-button {
+    font-size: 16px;
+    font-family: Tahoma, Verdana, sans-serif;
+    color: #c3c3c3;
+    font-weight: bold;
+}
+
+.mapboxgl-popup-close-button:hover {
+    color: #999;
+    background-color: white;
+    border-top-right-radius: 12px;
+}
+
+
 /*html {*/
 /*    width: 100%;*/
 /*    height: 100%;*/
