--- a/src/styles.css
+++ b/src/styles.css
@@ -33,10 +33,10 @@
 }
 
 .mapboxgl-popup-content {
-    max-width: 300px;
-    min-width: 50px;
+    max-width: 400px;
+    /*min-width: 50px;*/
     border-radius: 12px;
-    padding: 13px 19px;
+    padding: 1px 1px;
     box-shadow: 0 3px 14px rgba(0, 0, 0, 0.4);
     min-width: 300px;
 }
