--- a/src/styles.css
+++ b/src/styles.css
@@ -34,13 +34,14 @@
 
 
 .mapboxgl-popup-content {
+    padding: 0;
+    /*background-color: #b6a1e3;*/
     max-width: 400px;
     /*min-width: 50px;*/
     border-radius: 12px;
-    padding: 1px 1px;
+    /*padding: 1px 1px;*/
     box-shadow: 0 3px 14px rgba(0, 0, 0, 0.4);
     min-width: 300px;
-
 }
 
 /*.mapboxgl-popup-close-button {*/
