--- a/src/styles.css
+++ b/src/styles.css
@@ -6,8 +6,23 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
+
 html, body, #root {
-    height: 100%
+    height: 100%;
+    margin: 0;
+}
+
+
+@supports (height: 100dvh) {
+    .h-screen-dvh {
+        height: 100dvh;
+    }
+}
+
+@supports not (height: 100dvh) {
+    .h-screen-dvh {
+        height: 100vh; /* Fallback */
+    }
 }
 
 .leaflet-container {
