remove unnecessary font usage

--- a/src/styles.css
+++ b/src/styles.css
@@ -11,6 +11,7 @@ body, #root {
     height: 100%;
     margin: 0;
     padding: 0;
+    font-family: 'Rubik', sans-serif;
     -webkit-overflow-scrolling: touch;
 }
 
