--- a/src/styles.css
+++ b/src/styles.css
@@ -95,6 +95,19 @@ html {
     border-right-color: transparent !important;
 }
 
+.mapboxgl-popup-anchor-bottom .mapboxgl-popup-tip {
+    /*display: none !important;*/
+    background-color: transparent !important;
+}
+
+.mapboxgl-popup-anchor-top-right .mapboxgl-popup-tip {
+    display: none !important;
+}
+
+.mapboxgl-popup-anchor-top .mapboxgl-popup-tip {
+    display: none !important;
+}
+
 /*.mapboxgl-popup-anchor-top .mapboxgl-popup-tip,*/
 /*.mapboxgl-popup-anchor-top-left .mapboxgl-popup-tip,*/
 /*.mapboxgl-popup-anchor-top-right .mapboxgl-popup-tip {*/
